[package]
name = "twitch-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.1", features = ["csr", "nightly"] }
regex = "1.10.2"
serde = { version = "1.0.189", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
serde_json = "1.0.107"
wasm-bindgen-futures = "0.4.37"
wasm-sockets = "1.0.0"
web-sys = { version = "0.3.64", features = ["Window"] }
